--- a/less/navigation.less
+++ b/less/navigation.less
@@ -9,7 +9,7 @@
         .flex-layout(column, center, space-around);
         text-align: center;
         background: @nav-bg;
-        padding: 0 0 12px 0 ;
+        padding: 17px 0;
 
         h1{
             font-size: 4rem;
@@ -20,8 +20,8 @@
         a{
             text-decoration: none;
             color:@nav-font;
-            font-size: 1.75rem;
-            padding: 1.75%;
+            font-size: 1.5rem;
+            padding: 2%;
         }
 
   
